styling commit and updated readme

--- a/public/notes.html
+++ b/public/notes.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-dark bg-dark">
+  <nav class="navbar navbar-dark bg-dark" style="background-color: lightcoral !important;">
     <a class="navbar-brand" href="/">Note Taker
     </a>
     <div class="icons">
@@ -29,9 +29,9 @@
           </ul>
         </div>
       </div>
-      <div class="col-8">
-        <input class="note-title" placeholder="Note Title" maxlength="28" type="text">
-        <textarea class="note-textarea" placeholder="Note Text"></textarea>
+      <div class="col-8" style="padding: 0;">
+        <input class="note-title" placeholder="Note Title" maxlength="30" type="text" style="margin-top: 25px; border-bottom: 2px solid lightcoral; padding-bottom: 15px">
+        <textarea class="note-textarea" placeholder="Note Text" style="margin-top: 30px;"></textarea>
       </div>
     </div>
   </div>
