restyled note title

--- a/public/notes.html
+++ b/public/notes.html
@@ -30,7 +30,7 @@
         </div>
       </div>
       <div class="col-8" style="padding: 0;">
-        <input class="note-title" placeholder="Note Title" maxlength="30" type="text" style="margin-top: 25px; border-bottom: 2px solid lightcoral; padding-bottom: 15px">
+        <input class="note-title" placeholder="Note Title" type="text" style="margin-top: 25px; border-bottom: 2px solid lightcoral; padding-bottom: 15px">
         <textarea class="note-textarea" placeholder="Note Text" style="margin-top: 30px;"></textarea>
       </div>
     </div>
