--- a/public/notes.html
+++ b/public/notes.html
@@ -31,7 +31,7 @@
       </div>
       <div class="col-8" style="padding: 0;">
         <input class="note-title" placeholder="Note Title" type="text" style="margin-top: 25px; border-bottom: 2px solid lightcoral; padding-bottom: 15px">
-        <textarea class="note-textarea" placeholder="Note Text" style="margin-top: 30px;"></textarea>
+        <textarea class="note-textarea" placeholder="Note Text" style="margin-top: 30px; height: 100%;"></textarea>
       </div>
     </div>
   </div>
