--- a/public/notes.html
+++ b/public/notes.html
@@ -1,47 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Note Taker</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-    crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Mukta:wght@600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/css/styles.css">
-</head>
-<body>
-  <nav class="navbar navbar-dark bg-dark" style="background-color: rgb(252, 86, 86) !important;">
-    <a class="navbar-brand" href="/" style="font-family: 'Lobster', cursive; font-size: 35px;">Note Taker
-    </a>
-    <div class="icons">
-      <i class="text-light new-note">
-        <svg class="bi bi-pen" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg"> 
-          <path fill-rule="evenodd" d="M5.707 13.707a1 1 0 01-.39.242l-3 1a1 1 0 01-1.266-1.265l1-3a1 1 0 01.242-.391L10.086 2.5a2 2 0 012.828 0l.586.586a2 2 0 010 2.828l-7.793 7.793zM3 11l7.793-7.793a1 1 0 011.414 0l.586.586a1 1 0 010 1.414L5 13l-3 1 1-3z" clip-rule="evenodd"/>
-          <path fill-rule="evenodd" d="M9.854 2.56a.5.5 0 00-.708 0L5.854 5.855a.5.5 0 01-.708-.708L8.44 1.854a1.5 1.5 0 012.122 0l.293.292a.5.5 0 01-.707.708l-.293-.293z" clip-rule="evenodd"/>
-          <path d="M13.293 1.207a1 1 0 011.414 0l.03.03a1 1 0 01.03 1.383L13.5 4 12 2.5l1.293-1.293z"/>
-        </svg>
-      </i>
-      <i class="fas fa-save text-light save-note" style="font-size: 35px;"></i>
-    </div>
-  </nav>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-4 list-container">
-        <div class="card">
-          <ul class="list-group">
-          </ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Note Taker</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Mukta:wght@600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/assets/css/styles.css" />
+  </head>
+  <body>
+    <nav
+      class="navbar navbar-dark bg-dark"
+      style="background-color: rgb(252, 86, 86) !important;"
+    >
+      <a
+        class="navbar-brand"
+        href="/"
+        style="font-family: 'Lobster', cursive; font-size: 35px;"
+        >Note Taker
+      </a>
+      <div class="icons">
+        <i class="text-light new-note">
+          <svg
+            class="bi bi-pen"
+            width="2em"
+            height="2em"
+            viewBox="0 0 16 16"
+            fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M5.707 13.707a1 1 0 01-.39.242l-3 1a1 1 0 01-1.266-1.265l1-3a1 1 0 01.242-.391L10.086 2.5a2 2 0 012.828 0l.586.586a2 2 0 010 2.828l-7.793 7.793zM3 11l7.793-7.793a1 1 0 011.414 0l.586.586a1 1 0 010 1.414L5 13l-3 1 1-3z"
+              clip-rule="evenodd"
+            />
+            <path
+              fill-rule="evenodd"
+              d="M9.854 2.56a.5.5 0 00-.708 0L5.854 5.855a.5.5 0 01-.708-.708L8.44 1.854a1.5 1.5 0 012.122 0l.293.292a.5.5 0 01-.707.708l-.293-.293z"
+              clip-rule="evenodd"
+            />
+            <path
+              d="M13.293 1.207a1 1 0 011.414 0l.03.03a1 1 0 01.03 1.383L13.5 4 12 2.5l1.293-1.293z"
+            />
+          </svg>
+        </i>
+        <i
+          class="fas fa-save text-light save-note"
+          style="font-size: 35px;"
+        ></i>
+      </div>
+    </nav>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-4 list-container">
+          <div class="card">
+            <ul class="list-group"></ul>
+          </div>
+        </div>
+        <div class="col-8" style="padding: 0;">
+          <input
+            class="note-title"
+            placeholder="Note Title"
+            type="text"
+            style="
+              margin-top: 25px;
+              border-bottom: 2px solid lightcoral;
+              padding-bottom: 15px;
+            "
+          />
+          <textarea
+            class="note-textarea"
+            placeholder="Note Text"
+            style="margin-top: 30px; height: 100%; font-size: 18px;"
+          ></textarea>
         </div>
       </div>
-      <div class="col-8" style="padding: 0;">
-        <input class="note-title" placeholder="Note Title" type="text" style="margin-top: 25px; border-bottom: 2px solid lightcoral; padding-bottom: 15px">
-        <textarea class="note-textarea" placeholder="Note Text" style="margin-top: 30px; height: 100%; font-size: 18px;"></textarea>
-      </div>
     </div>
-  </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="/assets/js/index.js"></script>
-</body>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="/assets/js/index.js"></script>
+  </body>
 </html>
